--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,16 +4,16 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "argman"
-version = "0.1.0"
+version = "0.2.0"
 description = "A lightweight argument manager for Python CLI tools"
 authors = [{ text = "Seyed Mohammad Javad Taghipoor", email = "smjavadt.1379@gmail.com"}]
 readme = "README.md"
-license = { text = "GPL-3.0" }
+license = { text = "LGPL-3.0-or-later" }
 requires-python = ">=3.10"
 keywords = ["cli", "argparse", "arguments", "parser"]
 classifiers = [
     "Programming Language :: Python :: 3",
-    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
+    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
     "Operating System :: OS Independent"
 ]
 dependencies = []
