--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -22,5 +22,8 @@ jobs:
               with:
                   python-version: ${{ matrix.python-version }}
 
+            - name: Install package in development mode
+              run: pip install -e .
+
             - name: Run tests
               run: python -m unittest discover tests
